# mcp-coingecko-server

./: README.md  pyproject.toml
src/mcp_coingecko_server/: coingecko_api.py  server.py
