[project]
name = "mcp-coingecko-server"
version = "0.1.0"
description = "MCP CoinGecko Server for cryptocurrency data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycoingecko>=3.1.0",
    "fastapi>=0.68.0",
    "mcp[cli]>=1.6.0",
    "uvicorn>=0.15.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-coingecko-server = "mcp_coingecko_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_coingecko_server"]